--- a/opdracht1/css/style.css
+++ b/opdracht1/css/style.css
@@ -62,9 +62,12 @@ body {
   width: 100%;
 }
 
+section {
+    transition: all 0.5s;
+
+}
 section:hover {
   transform: scale(1.1);
-  transition: all 0.5s;
 }
 
 
