--- a/opdracht3/css/style.css
+++ b/opdracht3/css/style.css
@@ -75,8 +75,8 @@ section > img{
 }
 
 section > article > iframe{
-  height: 150px;
-  width: 270px;
+  height: 40%;
+  width: 100%;
   background-color: grey;
 }
 
