--- a/opdracht3/css/style.css
+++ b/opdracht3/css/style.css
@@ -10,9 +10,10 @@ body{
   grid-column-gap: 40px;
   grid-row-gap: 40px;
   margin: 0 auto;
-  margin-top: 4vh;
+  margin-top: 6vh;
   margin-left: 6vw;
   margin-right: 6vw;
+  
   
   
 }
@@ -24,6 +25,8 @@ body{
 #logo{
   width: 10%;
   margin-bottom: 30px;
+  margin-top: 1.5vh;
+  margin-left: 1vw;
 }
 
 
@@ -35,6 +38,7 @@ section{
 section:hover > article, section:focus > article{
   display: block;
   transition-duration: 1s;
+  cursor: pointer;
   
 }
 
@@ -81,7 +85,25 @@ section > article > iframe{
   
 }
 
+form{
+  margin-left: 6vw;
+  margin-top: 2vh;
+}
 
+form > label{
+  color: #0f171e;
+  font-family: 'Quicksand', sans-serif;
+  cursor: pointer;
+  margin-right: 20px;
+  
+  background: #00abe7;
+  padding:10px;
+
+}
+
+form > label > check{
+  color:red;
+}
 
 
 
