--- a/opdracht3/css/style.css
+++ b/opdracht3/css/style.css
@@ -95,9 +95,9 @@ form > label{
   font-family: 'Quicksand', sans-serif;
   cursor: pointer;
   margin-right: 20px;
-  
   background: #00abe7;
   padding:10px;
+  border-radius: 5px;
 
 }
 
