--- a/opdracht3/css/style.css
+++ b/opdracht3/css/style.css
@@ -97,7 +97,7 @@ form > label{
   margin-right: 20px;
   background: #00abe7;
   padding:10px;
-  border-radius: 5px;
+  border-radius: 10px;
 
 }
 
@@ -110,7 +110,7 @@ input[type='radio']:after {
         top: -2px;
         left: -1px;
         position: relative;
-        background-color: #d1d3d1;
+        background-color: lightsteelblue;
         content: '';
         display: inline-block;
         visibility: visible;
